<resources>
    <string name="app_name">Enchanted Kingdom</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="create_account">Create Account</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="merchants">MERCHANTS</string>
    <string name="refer_friends">REFER A FRIEND</string>
    <string name="book_event">BOOK EVENT</string>
    <string name="faq">FAQ</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="referral_code">EKMAGIC2K20</string>
    <string name="message_bottom">Use this code and get one month added to your membership!</string>
    <string name="my_profile">My Profile</string>
    <string name="yyyy_mm_dd_birthday">YYYY-MM-DD (Birthday)</string>
</resources>
