<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.index.IndexActivity"
    android:background="@drawable/member_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eksclusive_corner"
        android:adjustViewBounds="true"
        android:maxWidth="927sp"
        android:maxHeight="334sp"
        android:padding="25sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/manipis"
        android:layout_below="@+id/header_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/my_account"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/merchants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/merchants"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/refer_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/refer_friends"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/book_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/book_event"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/faq"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="#FFF"
                />

        </LinearLayout>
    </ScrollView>

    <!-- bottom -->
    <ImageView
        android:id="@+id/manipis"
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="#802eac"
        android:layout_above="@+id/makapal"/>
    <ImageView
        android:id="@+id/makapal"
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:background="#ca65fd"
        android:layout_above="@+id/bottom_navigation"/>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main"
        app:labelVisibilityMode="unlabeled"/>

</RelativeLayout>