<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg">

    <!-- Header Logo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ekoneliner"
        android:paddingTop="50sp"
        android:paddingLeft="25sp"
        android:paddingRight="25sp"
        android:id="@+id/header_logo"/>

    <!-- Form Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/header_logo"
        android:paddingTop="75sp"
        android:paddingLeft="25sp"
        android:paddingRight="25sp">

        <!-- Email Address -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address"
            android:textColor="#aaa"
            android:textColorHint="#aaa"
            android:background="#fff"
            android:padding="10sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="2px"
            android:minHeight="2px"
            android:background="#bbb"/>

        <!-- Password -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#aaa"
            android:textColorHint="#aaa"
            android:background="#fff"
            android:padding="10sp"/>

        <!-- Sign In -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="5sp"
            android:background="#EE5101"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:minHeight="40sp"/>

        <!-- Options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5sp">

            <!-- Forgot Password -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#000"/>

            </LinearLayout>


            <!-- Sign Up -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="#000"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>